--- a/ch08/new/index.html
+++ b/ch08/new/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기업형 웹 페이지</title>
+    <title>한남대학교 경영학과(RAW VERSION)</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/ch08/css/page_style.css">
