--- a/ch08/new/index.html
+++ b/ch08/new/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="inner">
-            <img src="./img/hnulogo.png" href="http://business.hannam.ac.kr/main/" alt="한남대 로고">
+            <img src="../img/hnulogo.png" href="http://business.hannam.ac.kr/main/" alt="한남대 로고">
             <h1><a href="http://business.hannam.ac.kr/main/">경영학과</a></h1>
 
             <ul id="gnb">
@@ -35,7 +35,7 @@
         </div>
     </header>
     <figure>
-        <video src="img/visual.mp4" autoplay muted loop></video>
+        <video src="../img/visual.mp4" autoplay muted loop></video>
         <div class="inner">
             <h3>실무형 인재양성과 수요자 중심의 교육, </h3>
             <p class ="df_text company"> 지역중심과 세계화를 <br> 함께 추구해 나가는 <br>글로컬리제이션 중심학과!
@@ -73,7 +73,7 @@
     </figure>
     <section><br/><br/></section>
     <footer>
-        <img src="./img/footer_img.PNG" alt="footer 한남대 로고">
+        <img src="../img/footer_img.PNG" alt="footer 한남대 로고">
         <div class="inner">
             <div class="upper">
                 <h1>개인정보처리방침</h1>
