--- a/ch08/new/index.html
+++ b/ch08/new/index.html
@@ -7,7 +7,7 @@
     <title>한남대학교 경영학과(RAW VERSION)</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/ch08/css/page_style.css">
+    <link rel="stylesheet" href="../css/page_style.css">
     <script src="js/ie.js"></script>
 </head>
 
